--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "knex": "^0.21.15",
     "knex-migrate": "^1.7.4",
+    "objection": "^2.2.7",
     "pg": "^8.5.1"
   }
 }
