--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "build/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "nodemon -L",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon -L"
   },
   "keywords": [],
   "author": "",
